style updates to website

--- a/src/pages/anvozx.html
+++ b/src/pages/anvozx.html
@@ -34,7 +34,7 @@
   </div>
   <div class="row">
     <div class="columns large-7">
-      <p> Using the program, TypeTool, I created and published an original typeface called “Anvozx”. My inspiration for this typeface comes from science fiction explorations, speci cally space and outer galaxies. Anvozx is a name associated with the Triangulum
+      <p> Using the program, TypeTool, I created and published an original typeface called “Anvozx”. My inspiration for this typeface comes from science fiction explorations, specifically space and outer galaxies. Anvozx is a name associated with the Triangulum
         Galaxy (a galaxy approximately 300 light years away from Earth). The typeface includes uppercase, lowercase, numbers, and over 50 extra characters.</p>
       <p>I achieved this feeling of science fiction with the use of geometric shapes and the simplicity of lines. Space between the elements allow for the eye to move through each letterform.</p>
       <p>I created two posters to demonstrate the inspiration for the typeface and designed a motion graphic using Adobe After Effects. I also created a book that shows the process on how each letter was formed and the complex precise systems that were used
@@ -48,13 +48,13 @@
             <li>Muncie Student Art League Award</li>
             </div>
           </ul>
-        <button class="add-button"><a href="assets/pdf/anvozx-process.pdf"target="_blank">Anvozx Process Work</a></button>
+        <button class="add-button button-in"><a href="assets/pdf/anvozx-process.pdf"target="_blank">Anvozx Process Work</a></button>
     </div>
   </div>
 </div>
 <div class="portfolio-images">
   <img src="../assets/img/anvozx/img01.jpg" alt="Anvozx">
-  <video controls Autoplay=autoplay>
+  <video controls>
 <source src="../assets/mp4/anvozx_motion_graphics_v2.mp4">
 </video>
   <div class="row multi-images">
@@ -129,8 +129,8 @@
     </ul>
 
   </div>
-
-  <h6 class="text-center">Copyright © 2017. All rights reserved. Designed and developed by yours truly. </h6>
+  <div class="copy-right-border"></div>
+  <h6 class="text-center copy-right">Copyright © 2017. All rights reserved. Designed and developed by yours truly. </h6>
 </footer>
 
 
