Add previous and next portfolio page arrows

--- a/src/pages/anvozx.html
+++ b/src/pages/anvozx.html
@@ -27,6 +27,21 @@
     </ul>
   </div>
 </header>
+
+<div class="previous-next-buttons previous-next-buttons-top">
+  <div class="previous-button">
+    <a href="calendar.html">
+      <img src="assets/img/main/down-arrow.svg" alt="down arrow">
+    </a>
+  </div>
+  <div class="next-button"> 
+    <a href="extreme-weather.html">
+      <img src="assets/img/main/down-arrow.svg" alt="down arrow">
+    </a> 
+  </div>
+</div>
+
+
 <div class="portfolio-content">
   <div class="portfolio-content-header">
     <h3>Anvozx</h3>
@@ -98,12 +113,18 @@
 
 
 </div>
-
-
-
-
-
-
+<div class="previous-next-buttons">
+  <div class="previous-button">
+    <a href="calendar.html">
+      <img src="assets/img/main/down-arrow.svg" alt="down arrow">
+    </a>
+  </div>
+  <div class="next-button"> 
+    <a href="extreme-weather.html">
+      <img src="assets/img/main/down-arrow.svg" alt="down arrow">
+    </a> 
+  </div>
+</div>
 
 <footer>
   <div class="footer-social-media">
@@ -127,8 +148,7 @@
         <a href="https://www.linkedin.com/in/leah-callahan-8b6393105/" target="_blank"><img src="../assets/img/social-media/linkedin.svg" alt="Linkedin"></a>
       </li>
     </ul>
-
-  </div>
+</div>
   <div class="copy-right-border"></div>
   <h6 class="text-center copy-right">Copyright © 2017. All rights reserved. Designed and developed by yours truly. </h6>
 </footer>
