--- a/src/pages/architect.html
+++ b/src/pages/architect.html
@@ -1,92 +1,91 @@
-
-
-    <header>
-
-      <div class="header-text">
-            <a href="index.html">
+<header>
+  <div class="header-text">
+    <a href="index.html">
         <img src="../assets/img/main/logo-text.svg" alt="Leah Callahan | Designers">
       </a>
-      </div>
-      <div class="social-media">
-        <ul>
-          <li>
-            <a href="https://www.instagram.com/leahcallahandesign/" target="_blank"><img src="../assets/img/social-media/instagram.svg" alt="Instagram"></a>
-          </li>
-          <li>
-            <a href="https://www.behance.net/LeahCallahanDesign" target="_blank"><img src="../assets/img/social-media/behance.svg" alt="Behance"></a>
-          </li>
-          <li>
-            <a href="http://codepen.io/lgcallahan/" target="_blank"><img src="../assets/img/social-media/codepen.svg" alt="CodePen"></a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/leah.callahan.14" target="_blank"><img src="../assets/img/social-media/facebook.svg" alt="Facebook"></a>
-          </li>
-          <li>
-            <a href="https://twitter.com/leahcdesign" target="_blank"><img src="../assets/img/social-media/twitter.svg" alt="Twitter"></a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/leah-callahan-8b6393105/" target="_blank"><img src="../assets/img/social-media/linkedin.svg" alt="Linkedin"></a>
-          </li>
-        </ul>
-
-      </div>
-
-
-
-    </header>
-
-    <div class="portfolio-content">
-      <div class="portfolio-content-header">
-
-
+  </div>
+  <div class="social-media">
+    <ul>
+      <li>
+        <a href="https://www.instagram.com/leahcallahandesign/" target="_blank"><img src="../assets/img/social-media/instagram.svg" alt="Instagram"></a>
+      </li>
+      <li>
+        <a href="https://www.behance.net/LeahCallahanDesign" target="_blank"><img src="../assets/img/social-media/behance.svg" alt="Behance"></a>
+      </li>
+      <li>
+        <a href="http://codepen.io/lgcallahan/" target="_blank"><img src="../assets/img/social-media/codepen.svg" alt="CodePen"></a>
+      </li>
+      <li>
+        <a href="https://www.facebook.com/leah.callahan.14" target="_blank"><img src="../assets/img/social-media/facebook.svg" alt="Facebook"></a>
+      </li>
+      <li>
+        <a href="https://twitter.com/leahcdesign" target="_blank"><img src="../assets/img/social-media/twitter.svg" alt="Twitter"></a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/leah-callahan-8b6393105/" target="_blank"><img src="../assets/img/social-media/linkedin.svg" alt="Linkedin"></a>
+      </li>
+    </ul>
+  </div>
+</header>
+<div class="previous-next-buttons previous-next-buttons-top">
+  <div class="previous-button">
+    <a href="field-trips.html">
+      <img src="assets/img/main/down-arrow.svg" alt="down arrow">
+    </a>
+  </div>
+  <div class="next-button">
+    <a href="calendar.html">
+      <img src="assets/img/main/down-arrow.svg" alt="down arrow">
+    </a>
+  </div>
+</div>
+<div class="portfolio-content">
+  <div class="portfolio-content-header">
     <h3>Frank Gehry</h3>
     <p><b>Architect Study / Informative Book</b></p>
+  </div>
+  <div class="row">
+    <div class="columns large-7">
+      <p> Designed and produced an information book about the famous work of architect, Frank Gehry. Researched post-modern and
+        modern architects. Incorporated Gehry's constructivism style and materials into the design of the book, such as carboard.
+        </p>
+      <p>Transformed his famous line sketches into transparent vinyl pages that are overlaid on top of the final buildings to
+        show the connection of his thoughts to the final product.</p>
+    </div>
+    <div class="columns large-5">
+    </div>
+  </div>
 </div>
-
-<div class="row">
-  <div class="columns large-7">
- <p> Designed and produced an information book about the famous work of architect, Frank Gehry. Researched post-modern and modern architects. Incorporated Gehry's constructivism style and materials into the design of the book, such as carboard. </p>
-<p>Transformed his famous line sketches into transparent vinyl pages that are overlaid on top of the final buildings to show the connection of his thoughts to the final product.</p>
- </div>
-  <div class="columns large-5">
-
-</div>
-</div>
-</div>
-
-
 <div class="portfolio-images">
-
-<img src="../assets/img/architect/img-1.jpg" alt="Frank Gehry Book">
-
-<img src="../assets/img/architect/img-3.jpg" alt="Frank Gehry Book">
-
-<img src="../assets/img/architect/img-5.jpg" alt="Frank Gehry Book">
-<img src="../assets/img/architect/img-6.jpg" alt="Frank Gehry Book">
-<img src="../assets/img/architect/img-7.jpg" alt="Frank Gehry Book">
-<img src="../assets/img/architect/img-8.jpg" alt="Frank Gehry Book">
-<img src="../assets/img/architect/img-9.jpg" alt="Frank Gehry Book">
-<img src="../assets/img/architect/img-10.jpg" alt="Frank Gehry Book">
-<img src="../assets/img/architect/img-11.jpg" alt="Frank Gehry Book">
-<img src="../assets/img/architect/img-12.jpg" alt="Frank Gehry Book">
-<img src="../assets/img/architect/img-13.jpg" alt="Frank Gehry Book">
-<img src="../assets/img/architect/img-14.jpg" alt="Frank Gehry Book">
-<img src="../assets/img/architect/img-15.jpg" alt="Frank Gehry Book">
-<img src="../assets/img/architect/img-4.jpg" alt="Frank Gehry Book">
-<img src="../assets/img/architect/img-16.jpg" alt="Frank Gehry Book">
-
-
-
-
+  <img src="../assets/img/architect/img-1.jpg" alt="Frank Gehry Book">
+  <img src="../assets/img/architect/img-3.jpg" alt="Frank Gehry Book">
+  <img src="../assets/img/architect/img-5.jpg" alt="Frank Gehry Book">
+  <img src="../assets/img/architect/img-6.jpg" alt="Frank Gehry Book">
+  <img src="../assets/img/architect/img-7.jpg" alt="Frank Gehry Book">
+  <img src="../assets/img/architect/img-8.jpg" alt="Frank Gehry Book">
+  <img src="../assets/img/architect/img-9.jpg" alt="Frank Gehry Book">
+  <img src="../assets/img/architect/img-10.jpg" alt="Frank Gehry Book">
+  <img src="../assets/img/architect/img-11.jpg" alt="Frank Gehry Book">
+  <img src="../assets/img/architect/img-12.jpg" alt="Frank Gehry Book">
+  <img src="../assets/img/architect/img-13.jpg" alt="Frank Gehry Book">
+  <img src="../assets/img/architect/img-14.jpg" alt="Frank Gehry Book">
+  <img src="../assets/img/architect/img-15.jpg" alt="Frank Gehry Book">
+  <img src="../assets/img/architect/img-4.jpg" alt="Frank Gehry Book">
+  <img src="../assets/img/architect/img-16.jpg" alt="Frank Gehry Book">
 </div>
-
-
-
-
-
-
+<div class="previous-next-buttons">
+  <div class="previous-button">
+    <a href="field-trips.html">
+      <img src="assets/img/main/down-arrow.svg" alt="down arrow">
+    </a>
+  </div>
+  <div class="next-button">
+    <a href="calendar.html">
+      <img src="assets/img/main/down-arrow.svg" alt="down arrow">
+    </a>
+  </div>
+</div>
 <footer>
-
   <div class="footer-social-media">
     <ul>
       <li>
@@ -108,18 +107,10 @@
         <a href="https://www.linkedin.com/in/leah-callahan-8b6393105/" target="_blank"><img src="../assets/img/social-media/linkedin.svg" alt="Linkedin"></a>
       </li>
     </ul>
-
   </div>
-
-
-
-
-
-  <h6 class="text-center">Copyright © 2017. All rights reserved. Designed and developed by yours truly. </h6>
+  <div class="copy-right-border"></div>
+  <h6 class="text-center copy-right">Copyright © 2017. All rights reserved. Designed and developed by yours truly. </h6>
 </footer>
-
-
-    <script src="assets/js/app.js"></script>
-  </body>
-
-  </html>
+<script src="assets/js/app.js"></script>
+</body>
+</html>
