--- a/src/pages/field-trips.html
+++ b/src/pages/field-trips.html
@@ -1,113 +1,104 @@
-
-
-    <header>
-
-      <div class="header-text">
-            <a href="index.html">
+<header>
+  <div class="header-text">
+    <a href="index.html">
         <img src="../assets/img/main/logo-text.svg" alt="Leah Callahan | Designers">
       </a>
-      </div>
-      <div class="social-media">
-        <ul>
-          <li>
-            <a href="https://www.instagram.com/leahcallahandesign/" target="_blank"><img src="../assets/img/social-media/instagram.svg" alt="Instagram"></a>
-          </li>
-          <li>
-            <a href="https://www.behance.net/LeahCallahanDesign" target="_blank"><img src="../assets/img/social-media/behance.svg" alt="Behance"></a>
-          </li>
-          <li>
-            <a href="http://codepen.io/lgcallahan/" target="_blank"><img src="../assets/img/social-media/codepen.svg" alt="CodePen"></a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/leah.callahan.14" target="_blank"><img src="../assets/img/social-media/facebook.svg" alt="Facebook"></a>
-          </li>
-          <li>
-            <a href="https://twitter.com/leahcdesign" target="_blank"><img src="../assets/img/social-media/twitter.svg" alt="Twitter"></a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/leah-callahan-8b6393105/" target="_blank"><img src="../assets/img/social-media/linkedin.svg" alt="Linkedin"></a>
-          </li>
-        </ul>
-
-      </div>
-
-
-
-    </header>
-
-    <div class="portfolio-content">
-      <div class="portfolio-content-header">
-
-
-        <h3>BSU Field Trips</h3>
-        <p><b>Educational App Design and Development</b></p>
-</div>
-
-<div class="row">
-  <div class="columns large-7">
-    <p>Created and developed interactive educational activities for 3rd, 4th, and 5th grade students in Indiana. Through the Digital Corps, collaboratively worked on a team with five other designers, as well as communicating with developers.</p>
-    <p>Worked with existing brand guidelines, style guides, and head designers to make sure the style of the activities worked cohesively with the entirety of the app. </p>
-    <p>Used skills of HTML, CSS, and JavaScript/jQuery when creating the activities for iPad and desktop format.</p>
-    <p>Along with the activities, contributed to the creation of the app in other areas; including creating illustrations, content layout, and creating content and design for lower thirds. </p>
-    ​
-
-    ​
-
- </div>
-  <div class="columns add-button large-5">
-    <div class="team-members-group">
-<ul>
-    <li><b>Design Team:</b></li>
-      <li>Sydney Patton</li>
-      <li>Grace Winiger</li>
-      <li>Marisa Lozano</li>
-      <li>Reanna Miller</li>
-      <li>Anna Weddle</li>
-</ul>
   </div>
-  <div class="team-members-group">
-<ul>
-  <li><b>Mobile App Awards:</b></li>
-  <li>2016 W3 Awards Gold Winner: "Family '&' Kids"</li>
-  <li>2016 W3 Awards Silver Winner: "Education"</li>
-  </ul>
+  <div class="social-media">
+    <ul>
+      <li>
+        <a href="https://www.instagram.com/leahcallahandesign/" target="_blank"><img src="../assets/img/social-media/instagram.svg" alt="Instagram"></a>
+      </li>
+      <li>
+        <a href="https://www.behance.net/LeahCallahanDesign" target="_blank"><img src="../assets/img/social-media/behance.svg" alt="Behance"></a>
+      </li>
+      <li>
+        <a href="http://codepen.io/lgcallahan/" target="_blank"><img src="../assets/img/social-media/codepen.svg" alt="CodePen"></a>
+      </li>
+      <li>
+        <a href="https://www.facebook.com/leah.callahan.14" target="_blank"><img src="../assets/img/social-media/facebook.svg" alt="Facebook"></a>
+      </li>
+      <li>
+        <a href="https://twitter.com/leahcdesign" target="_blank"><img src="../assets/img/social-media/twitter.svg" alt="Twitter"></a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/leah-callahan-8b6393105/" target="_blank"><img src="../assets/img/social-media/linkedin.svg" alt="Linkedin"></a>
+      </li>
+    </ul>
+  </div>
+</header>
+<div class="previous-next-buttons previous-next-buttons-top">
+  <div class="previous-button">
+    <a href="wcrd.html">
+        <img src="assets/img/main/down-arrow.svg" alt="down arrow">
+      </a>
+  </div>
+  <div class="next-button">
+    <a href="architect.html">
+        <img src="assets/img/main/down-arrow.svg" alt="down arrow">
+      </a>
+  </div>
 </div>
-    ​
-
-
-<button class="add-button"><a href="http://app.bsufieldtrips.org/#/avatars"target="_blank">View Field Trips App</a></button>
-
+<div class="portfolio-content">
+  <div class="portfolio-content-header">
+    <h3>BSU Field Trips</h3>
+    <p><b>Educational App Design and Development</b></p>
+  </div>
+  <div class="row">
+    <div class="columns large-7">
+      <p>Created and developed interactive educational activities for 3rd, 4th, and 5th grade students in Indiana. Through the
+        Digital Corps, collaboratively worked on a team with five other designers, as well as communicating with developers.</p>
+      <p>Worked with existing brand guidelines, style guides, and head designers to make sure the style of the activities worked
+        cohesively with the entirety of the app. </p>
+      <p>Used skills of HTML, CSS, and JavaScript/jQuery when creating the activities for iPad and desktop format.</p>
+      <p>Along with the activities, contributed to the creation of the app in other areas; including creating illustrations,
+        content layout, and creating content and design for lower thirds. </p>
+    </div>
+    <div class="columns add-button large-5">
+      <div class="team-members-group">
+        <ul>
+          <li><b>Design Team:</b></li>
+          <li>Sydney Patton</li>
+          <li>Grace Winiger</li>
+          <li>Marisa Lozano</li>
+          <li>Reanna Miller</li>
+          <li>Anna Weddle</li>
+        </ul>
+      </div>
+      <div class="team-members-group">
+        <ul>
+          <li><b>Mobile App Awards:</b></li>
+          <li>2016 W3 Awards Gold Winner: "Family '&' Kids"</li>
+          <li>2016 W3 Awards Silver Winner: "Education"</li>
+        </ul>
+      </div>
+      <button class="add-button"><a href="http://app.bsufieldtrips.org/#/avatars"target="_blank">View Field Trips App</a></button>
+    </div>
+  </div>
 </div>
-</div>
-</div>
-
-
 <div class="portfolio-images">
-
-
-
-<video controls Autoplay=autoplay>
-  <source src="../assets/img/field-trips/mov01.mp4">
-</video>
-
-
-<video controls Autoplay=autoplay>
-<source src="../assets/img/field-trips/mov02.mp4">
-</video>
-
+  <video controls Autoplay=autoplay>
+    <source src="../assets/img/field-trips/mov01.mp4">
+  </video>
+  <video controls Autoplay=autoplay>
+    <source src="../assets/img/field-trips/mov02.mp4">
+  </video>
   <img src="../assets/img/field-trips/field-trips-thumbnail.jpg" alt="Field Trips">
-<img src="../assets/img/field-trips/img02.png" alt="Field Trips">
-
-
+  <img src="../assets/img/field-trips/img02.png" alt="Field Trips">
 </div>
-
-
-
-
-
-
+<div class="previous-next-buttons">
+  <div class="previous-button">
+    <a href="wcrd.html">
+        <img src="assets/img/main/down-arrow.svg" alt="down arrow">
+      </a>
+  </div>
+  <div class="next-button">
+    <a href="architect.html">
+        <img src="assets/img/main/down-arrow.svg" alt="down arrow">
+      </a>
+  </div>
+</div>
 <footer>
-
   <div class="footer-social-media">
     <ul>
       <li>
@@ -129,18 +120,10 @@
         <a href="https://www.linkedin.com/in/leah-callahan-8b6393105/" target="_blank"><img src="../assets/img/social-media/linkedin.svg" alt="Linkedin"></a>
       </li>
     </ul>
-
   </div>
-
-
-
-
-
-  <h6 class="text-center">Copyright © 2017. All rights reserved. Designed and developed by yours truly. </h6>
+  <div class="copy-right-border"></div>
+  <h6 class="text-center copy-right">Copyright © 2017. All rights reserved. Designed and developed by yours truly. </h6>
 </footer>
-
-
-    <script src="assets/js/app.js"></script>
-  </body>
-
-  </html>
+<script src="assets/js/app.js"></script>
+</body>
+</html>
