--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -271,8 +271,8 @@
     <div class="row">
       <div class="medium-4 columns about-headshot-container">
         <div class="headshot"></div>
-        <!-- <img src="assets/img/main/headshot_1.jpg" alt="Leah Callahan Headshot">ß -->
-        <button><a href="assets/pdf/leah_callahan_résumé.pdf"target="_blank">Résumé</a></button>
+        <!-- <img src="assets/img/main/headshot_1.jpg" alt="Leah Callahan Headshot"> -->
+        <button><a href="assets/pdf/leah_callahan_resume.pdf"target="_blank">Résumé</a></button>
       </div>
       <div class="medium-8 columns about-content-container">
         <div class="about-bio">
